WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313951
Rotating inline stagemode models is slow
https://bugs.webkit.org/show_bug.cgi?id=313951
Summary
Rotating inline stagemode models is slow
Mike Wyrzykowski
Reported
2026-05-03 21:46:03 PDT
rdar://175797120
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2026-05-03 21:49:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64146
EWS
Comment 2
2026-05-04 13:51:48 PDT
Committed
312550@main
(7e4c607477c1): <
https://commits.webkit.org/312550@main
> Reviewed commits have been landed. Closing PR #64146 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug