Rotating inline stagemode models is slow https://bugs.webkit.org/show_bug.cgi?id=313951 rdar://175797120

Reviewed by Richard Robinson.

Connect kDefaultDragToRotationMultiplier to the user defaults
WebKitModelDragToRotationMultiplier where 1.0 equates
to the current behavior, 0.5 is twice as slow, and 2.0 is twice
as fast.

* Source/WebKit/WebProcess/Model/WebModelPlayer.mm:
(WebKit::WebModelPlayer::handleMouseMove):

Canonical link: https://commits.webkit.org/312550@main